# esp-hal

esp-hal-async/: Cargo.toml  README.md
esp-hal-async/.cargo/: config.toml
esp-hal-async/examples/: embassy_hello.rs
esp-hal-async/src/: gpio.rs  lib.rs
esp-hal-async/src/embassy/: time_driver.rs
esp-hal-common/: Cargo.toml
esp-hal-common/src/: embassy.rs  gpio.rs  lib.rs
esp-hal-common/src/embassy/: time_driver.rs
esp-hal-common/src/interrupt/: riscv.rs
esp-hal-procmacros/src/: lib.rs
esp32-hal/: Cargo.toml  dump-millis-esp-dev-no-debug.S
esp32-hal/examples/: hello_world.rs
esp32c3-hal/: Cargo.toml  test.rs
esp32c3-hal/examples/: embassy_hello.rs  gpio_interrupt.rs
esp32c3-hal/src/: lib.rs
esp32s3-hal/: Cargo.toml
esp32s3-hal/examples/: embassy_hello.rs
esp32s3-hal/src/: lib.rs
